プラグインの拡張機能にSetVarUsageTypeProviderを追加し、setVarの引数をWrite扱いにしました。

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,7 +14,7 @@
     <extensions defaultExtensionNs="com.intellij">
         <!-- コード補完のコントリビューター -->
 <!--        <completion.contributor language="PHP" implementationClass="com.sample.ViewVariableCompletionContributor"/>-->
-
+        <usageTypeProvider implementation="com.sample.phpstormpluginviewvariable.SetVarUsageTypeProvider"/>
     </extensions>
 
     <extensions defaultExtensionNs="com.intellij.psi">
