Add completion contributors for view variable autocomplete
- Added ViewVariableCompletionContributor using generic CompletionContributor
- Added PhpViewVariableCompletionContributor extending PhpCompletionContributor  
- Enhanced ViewPredefinedVariableProvider with better logging
- Improved Windows path handling in ControllerFile and all path checking methods
- Registered both completion contributors in plugin.xml

This should provide autocomplete suggestions for variables passed from controllers 
via setVar() calls in view files.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,6 +13,8 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <usageTypeProvider implementation="com.sample.phpstormpluginviewvariable.SetVarUsageTypeProvider"/>
+        <completion.contributor language="PHP" implementationClass="com.sample.phpstormpluginviewvariable.ViewVariableCompletionContributor"/>
+        <completion.contributor language="PHP" implementationClass="com.sample.phpstormpluginviewvariable.PhpViewVariableCompletionContributor"/>
     </extensions>
 
     <extensions defaultExtensionNs="com.intellij.psi">
