VirtualFileの取り方を修正

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,10 +13,7 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <usageTypeProvider implementation="com.sample.phpstormpluginviewvariable.SetVarUsageTypeProvider"/>
-    </extensions>
-
-    <extensions defaultExtensionNs="com.intellij.completion">
-        <contributor implementationClass="com.sample.phpstormpluginviewvariable.ViewVariableCompletionContributor"/>
+        <completion.contributor language="PHP" implementationClass="com.sample.phpstormpluginviewvariable.ViewVariableCompletionContributor"/>
     </extensions>
 
     <extensions defaultExtensionNs="com.intellij.psi">
