--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin>
     <id>com.sample.phpstormpluginviewvariable</id>
-    <name>PHP Controller-View Resolver</name>
+    <name>Controller-View Resolver</name>
     <vendor>Your Company</vendor>
     <description>
         <![CDATA[
